RESOLVED FIXED89964
[EFL] REGRESSION (r121163): fast/frames/iframe-access-screen-of-deleted.html crashes
https://bugs.webkit.org/show_bug.cgi?id=89964
Summary [EFL] REGRESSION (r121163): fast/frames/iframe-access-screen-of-deleted.html ...
Thiago Marcos P. Santos
Reported 2012-06-26 02:53:28 PDT
fast/frames/iframe-access-screen-of-deleted.html started failing on EFL Linux 64-bit Debug on r121163. http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug/r121163%20(1874)/results.html failed
Attachments
Patch (1.56 KB, patch)
2012-06-26 03:09 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-06-26 03:09:47 PDT
Chris Dumez
Comment 2 2012-06-26 03:15:00 PDT
Comment on attachment 149502 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-06-26 04:28:11 PDT
Comment on attachment 149502 [details] Patch Clearing flags on attachment: 149502 Committed r121253: <http://trac.webkit.org/changeset/121253>
WebKit Review Bot
Comment 4 2012-06-26 04:28:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.