[EFL] REGRESSION (r121163): fast/frames/iframe-access-screen-of-deleted.html crashes https://bugs.webkit.org/show_bug.cgi?id=89964

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-06-26
Reviewed by Andreas Kling.

Added missing null pointer check.

* platform/efl/PlatformScreenEfl.cpp:
(WebCore::screenDepth):
(WebCore::screenDepthPerComponent):

Canonical link: https://commits.webkit.org/107823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121253 268f45cc-cd09-0410-ab3c-d52691b4dbfc